add_executable(test_nasl_c test_vec.c)
target_link_libraries(test_nasl_c PRIVATE nasl)
set_property(TARGET test_nasl_c PROPERTY C_STANDARD 11)
add_test(NAME test_nasl_c COMMAND test_nasl_c)

enable_language(CXX)
add_executable(test_nasl_cpp test_vec.cpp)
target_link_libraries(test_nasl_cpp PRIVATE nasl)
set_property(TARGET test_nasl_cpp PROPERTY CXX_STANDARD 20)
add_test(NAME test_nasl_cpp COMMAND test_nasl_cpp)